@@ -186,7 +186,7 @@ public class Thing42<K, D> implements Thing42orNull<K, D> {
         this.data = newData;
     }
     
-		/**
+	/**
 	 * Check if this Thing42 equals Object o.
 	 *
 	 * @param o - the object to check for equality
@@ -197,10 +197,10 @@ public class Thing42<K, D> implements Thing42orNull<K, D> {
 		if (this == o){
 			return true;
 		}
-		if (!(o instanceof Thing42)){
+		if (!(o instanceof Thing42<?, ?>)){
 			return false;
 		}
-		Thing42 thing = (Thing42) o;
+		Thing42<K, D> thing = (Thing42<K, D>) o;
 		// perform == check first, if referencing same object, faster test
 		// if not, check that both are not null, and equal
 		// o.equals(null) will return false
@@ -218,7 +218,7 @@ public class Thing42<K, D> implements Thing42orNull<K, D> {
 	public int hashCode(){
 		int prime = 17;
 		int result = 1;
-		Long l = new Long(LEVEL);
+		Long l = Long.valueOf(LEVEL);
 		// to avoid NPE, if key or data is null, use 0, if not, use their hash
 		result = prime * result + ((KEY == null) ? 0 : KEY.hashCode());
 		result = prime * result + ((data == null) ? 0 : data.hashCode());
